...

do uzupełnienia

...

2020-11-21
1. Dodanie UserStories.txt
2. Usuwanie produktu z koszyka gdy zostanie usuniety z bazy danych
3. Dziedziczenie zmian z kategorii zrodlowej do podkategorii

2020-11-22
1. Koszyk tworzony automatycznie przy tworzeniu usera jednorazowo
2. UNIT_TESTS ProductCategory: validate_attributes_types, validate_root_category
3. UNIT_TESTS ProductCategory: inherit_attributes

2020-11-23
1. UNIT_TESTS ProductCategory: pre_save_product_category signal called methods order

2020-11-24
1. UNIT_TESTS ProductCategory: update_category_fields (patchowana metoda make_root() - do dokonczenia)